force-app/main/default/objects/Vehicle_Part__c/Vehicle_Part__c.object-meta.xml
<CustomObject>
    <description>Tracks inventory of parts for sale and service orders.</description>
    <label>Vehicle Part</label>
    <nameField>
        <label>Vehicle Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>