force-app/main/default/objects/Vehicle_Part__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&apos;Enter any relevant part information here&apos;</defaultValue>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>