force-app/main/default/objects/Vehicle_Part__c/fields/Part_Code__c.field-meta.xml
<CustomField>
    <fullName>Part_Code__c</fullName>
    <label>Part Code Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>